# villa

volume-cartographer/apps/VC3D/: AxisAlignedSliceController.cpp  AxisAlignedSliceController.hpp  CMakeLists.txt  CWindow.cpp  VCMain.ui
volume-cartographer/apps/VC3D/viewer_controls/panels/: ViewerCompositePanel.cpp  ViewerCompositePanel.hpp
volume-cartographer/apps/VC3D/volume_viewers/: CChunkedVolumeViewer.cpp  CChunkedVolumeViewer.hpp  CameraGizmoWidget.cpp  CameraGizmoWidget.hpp  VolumeViewerBase.hpp  VolumetricCompositor.cpp  VolumetricCompositor.hpp
volume-cartographer/core/include/vc/core/render/: PostProcess.hpp
volume-cartographer/core/include/vc/core/util/: Compositing.hpp
volume-cartographer/core/src/: Compositing.cpp
volume-cartographer/core/src/render/: PostProcess.cpp
volume-cartographer/core/test/: CMakeLists.txt  test_compositing.cpp  test_post_process.cpp  test_volumetric_compositor.cpp
volume-cartographer/docs/: vc3d_volumetric_composite_plan.md
volume-cartographer/utils/include/utils/: compositing.hpp
